[gd_scene load_steps=21 format=3 uid="uid://bb27qu6ntkrki"]

[ext_resource type="Script" path="res://UI/menu/inventory/inventory-ui.gd" id="1_15exu"]
[ext_resource type="Texture2D" uid="uid://bmw5w0b76rnby" path="res://assets/UI/components/panel.png" id="2_8x4k6"]
[ext_resource type="Texture2D" uid="uid://c8nkwlfeoomvr" path="res://assets/UI/icons/Usables.png" id="3_3iblj"]
[ext_resource type="Theme" uid="uid://cyed3wn1agc37" path="res://assets/UI/themes/UI-elements/round-panel-3.tres" id="4_r3qie"]
[ext_resource type="Texture2D" uid="uid://ddo537ghvks2b" path="res://assets/entities/player.png" id="7_14rut"]
[ext_resource type="Texture2D" uid="uid://jb4iqplcwjyj" path="res://assets/UI/icons/Ferocity.png" id="9_unu0r"]
[ext_resource type="Texture2D" uid="uid://c4bc5s1o4qa72" path="res://assets/UI/icons/Perseverance.png" id="10_28qxa"]
[ext_resource type="Texture2D" uid="uid://dywyo62njeexp" path="res://assets/UI/components/Frame 23.png" id="10_qnobs"]
[ext_resource type="Texture2D" uid="uid://dl1y4v7wi262c" path="res://assets/UI/components/Frame 24.png" id="11_415ok"]
[ext_resource type="Texture2D" uid="uid://bej8d5jd1it7r" path="res://assets/UI/icons/Agility.png" id="11_mahg8"]
[ext_resource type="Texture2D" uid="uid://dilhab1ljhoj" path="res://assets/UI/components/Frame 25.png" id="12_iwpay"]
[ext_resource type="Texture2D" uid="uid://y7hxr8hq5k2e" path="res://assets/UI/icons/Perception.png" id="12_xcopr"]
[ext_resource type="Texture2D" uid="uid://temylux8m08k" path="res://assets/UI/components/Frame 27.png" id="13_ohdjm"]
[ext_resource type="Texture2D" uid="uid://dhjlsjw3kl2fe" path="res://assets/UI/components/Frame 26.png" id="14_03w30"]
[ext_resource type="Theme" uid="uid://lkf3mb4llx74" path="res://assets/UI/themes/text/text-large-highlight.tres" id="14_5c88c"]
[ext_resource type="Theme" uid="uid://b18tu8eqd6rjk" path="res://assets/UI/themes/text/text-small-highlight.tres" id="15_q45rn"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_lruwr"]
load_path = "res://.godot/imported/All Items.png-2370698b0cb04fc0217a759c37fb6873.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c1pkr"]
load_path = "res://.godot/imported/Resources.png-8a8510f37a67797398ce0d3e7230cd91.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1efbs"]
load_path = "res://.godot/imported/Weapons.png-9cc3f19e83d136657396920979a7e1a9.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tk18a"]
load_path = "res://.godot/imported/Blueprints.png-5dbb919c1832c25c3233e8380a06b8b2.ctex"

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15exu")

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(0, 600)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("2_8x4k6")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -455.5
offset_top = 36.0
offset_right = 455.5
offset_bottom = 406.0
grow_horizontal = 2
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
texture = ExtResource("2_8x4k6")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_right = 12.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_lruwr")
expand_mode = 2

[node name="AllItems" type="Button" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="NinePatchRect2" type="NinePatchRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
texture = ExtResource("2_8x4k6")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_right = 12.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_c1pkr")
expand_mode = 2

[node name="AllMaterials" type="Button" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="NinePatchRect3" type="NinePatchRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
texture = ExtResource("2_8x4k6")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect3"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_right = 12.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_1efbs")
expand_mode = 2

[node name="AllWeapons" type="Button" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="NinePatchRect5" type="NinePatchRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
texture = ExtResource("2_8x4k6")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect5"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_right = 12.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3iblj")
expand_mode = 2

[node name="AllUsables" type="Button" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="NinePatchRect4" type="NinePatchRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
texture = ExtResource("2_8x4k6")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect4"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_right = 12.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_tk18a")
expand_mode = 2

[node name="AllBluprints" type="Button" parent="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Resources" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 60

[node name="PanelContainer" type="PanelContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("7_14rut")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Label1" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Name
"

[node name="Label2" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Background"

[node name="Label3" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Level"

[node name="Label4" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Ambition"

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Background" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Level" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Ambition" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="Panel" type="Panel" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
self_modulate = Color(0.709804, 0.0666667, 0.0666667, 1)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("4_r3qie")

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/Panel"]
self_modulate = Color(0.709804, 0.0666667, 0.0666667, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_unu0r")
expand_mode = 2

[node name="Ferocity" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="Panel" type="Panel" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
self_modulate = Color(0.329412, 0.639216, 0.184314, 1)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("4_r3qie")

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2/Panel"]
self_modulate = Color(0.329412, 0.639216, 0.184314, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_28qxa")
expand_mode = 2

[node name="Perseverance" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="Panel3" type="Panel" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer3"]
self_modulate = Color(0.827451, 0.643137, 0.168627, 1)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("4_r3qie")

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer3/Panel3"]
self_modulate = Color(0.827451, 0.643137, 0.168627, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -13.0
offset_right = 14.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_mahg8")
expand_mode = 2

[node name="Agility" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="Panel4" type="Panel" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer4"]
self_modulate = Color(0.117647, 0.372549, 0.607843, 1)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("4_r3qie")

[node name="TextureRect" type="TextureRect" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer4/Panel4"]
self_modulate = Color(0.117647, 0.372549, 0.607843, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -13.0
offset_right = 14.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_xcopr")
expand_mode = 2

[node name="Perception" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer4"]
layout_mode = 2
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Experience" type="TextureProgressBar" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
step = 0.0
fill_mode = 4
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_over = ExtResource("10_qnobs")
texture_progress = ExtResource("11_415ok")

[node name="LevelUpButton" type="TextureButton" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer3/Experience"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("12_iwpay")
texture_pressed = ExtResource("13_ohdjm")
texture_hover = ExtResource("14_03w30")
ignore_texture_size = true
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Current Experience:"

[node name="CurrentExperience" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("14_5c88c")

[node name="LevelUp" type="VBoxContainer" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer3/VBoxContainer/LevelUp"]
layout_mode = 2
text = "Ready to level up!"

[node name="ExperienceCost" type="Label" parent="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer3/VBoxContainer/LevelUp"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("15_q45rn")

[connection signal="pressed" from="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect/AllItems" to="." method="_on_all_items_pressed"]
[connection signal="pressed" from="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect2/AllMaterials" to="." method="_on_all_materials_pressed"]
[connection signal="pressed" from="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect3/AllWeapons" to="." method="_on_all_weapons_pressed"]
[connection signal="pressed" from="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect5/AllUsables" to="." method="_on_all_usables_pressed"]
[connection signal="pressed" from="NinePatchRect2/HBoxContainer/VBoxContainer/HBoxContainer/NinePatchRect4/AllBluprints" to="." method="_on_all_bluprints_pressed"]
[connection signal="pressed" from="NinePatchRect2/HBoxContainer/VBoxContainer2/HBoxContainer3/Experience/LevelUpButton" to="." method="_on_level_up_button_pressed"]
